Added product list section and extended featured collection section

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -713,7 +713,7 @@
       }
     },
     "featured-collection": {
-      "name": "Featured collection",
+      "name": "Featured product list",
       "settings": {
         "title": {
           "label": "Heading"
